# Robototechnics

./: .gitignore  frames_2025-12-19_01.30.30.gv  help.md
Archive_22.12/install/: local_setup.sh  setup.sh
Archive_22.12/install/Cleaning_act_cl_svr/share/Cleaning_act_cl_svr/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Archive_22.12/log/: latest_build
Archive_22.12/src/Cleaning_act_cl_svr/: setup.cfg  setup.py
Archive_22.12/src/action_cl_andr/: setup.cfg  setup.py
Archive_22.12/src/action_cleaning_robot/: CMakeLists.txt
Archive_22.12/src/carrot_follow/: setup.cfg  setup.py
Archive_22.12/src/learning_tf2_py/: setup.py
Archive_22.12/src/py_my_package_1/: package.xml  setup.cfg  setup.py
Archive_22.12/src/py_pubsub/: package.xml  (+1 more)
Task1/: readme.md
Task1/ex01/: commands.txt  help.txt
Task2/ex01/: .bashrc  help.txt
Task2/ex02/: package_path_ros2topic.txt
Task2/ex04/: colcon_build.txt
Task2/ex05/: rosnode_info.txt  rosnode_list.txt
Task2/ex06/: cmd_vel.txt  help.txt
Task2/ex07/: help.txt  parameter_server.txt
Task2/ex08/: help.txt  rqt_console.csv  three_turtles.launch
Task2/ex09/: help.txt
Task2/ex10/: help.txt
Task3/ex01/: help.txt
Task3/ex02/: help.txt  pose_speed_x1.yaml  pose_speed_x2.yaml
Task3/ex03/: doctor.txt
Task3/ex04/: help.txt
Task3/ex04/move_to_goal/: package.xml  setup.py
Task3/ex04/move_to_goal/move_to_goal/: move_to_goal.py
Task3/ex05/: readme.md
Task4/: help.txt  task.txt
Task4/ex01/: last_transform.txt  transform.txt
Task4/ex02/: carrot.rviz
Task4/ex04/: package.xml  setup.py
Task5/ex03/: help.txt
Task5/ex04/: frames_2026-01-19_03.55.44.gv  help.txt
(+229 files in other folders)
