<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>move_to_goal</name>
  <version>0.0.0</version>
  <description>Package for moving turtle to goal coordinates</description>
  <maintainer email="mihas05@mail.ru">ms</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>turtlesim</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
