<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>Cleaning_act_cl_svr</name>
  <version>0.0.0</version>
  <description>Cleaning Robot simulation with turtlesim</description>
  <maintainer email="mihas05@mail.ru">ms</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>turtlesim</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
